// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cart checkout() should return an object with the total and the list od items 1`] = `
{
  "items": [
    {
      "product": {
        "price": 35899,
        "title": "Adidas running shoes - men",
      },
      "quantity": 2,
    },
    {
      "product": {
        "price": 41872,
        "title": "Adidas running shoes - women",
      },
      "quantity": 2,
    },
  ],
  "total": {
    "amount": 155542,
    "currency": "BRL",
    "precision": 2,
  },
}
`;

exports[`Cart checkout() should return an object with the total and the list od items when summary() is called 1`] = `
{
  "formatted": "R$1,555.4",
  "items": [
    {
      "product": {
        "price": 35899,
        "title": "Adidas running shoes - men",
      },
      "quantity": 2,
    },
    {
      "product": {
        "price": 41872,
        "title": "Adidas running shoes - women",
      },
      "quantity": 2,
    },
  ],
  "total": {
    "amount": 155542,
    "currency": "BRL",
    "precision": 2,
  },
}
`;
